# DreamerUniverse-ItemTest

./: README.md
ItemTest/: CMakeLists.txt  ItemTest.sln
ItemTest/Debug/: ItemTest.exp  ItemTest.ilk
ItemTest/ItemTest/: Item.cpp  Item.h  ItemComponents.cpp  ItemComponents.h  ItemConfig.cpp  ItemConfig.h  ItemTest.vcxproj  ItemTest.vcxproj.filters  flecs_components_http.h  flecs_dash.h  flecs_monitor.h  flecs_os_api_stdcpp.cpp  flecs_os_api_stdcpp.h  flecs_systems_civetweb.h  main.cpp
ItemTest/ItemTest/Debug/: ItemTest.exe.recipe  ItemTest.ilk  vc142.idb
ItemTest/ItemTest/Debug/ItemTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ItemTest.lastbuildstate  ItemTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ItemTest/ItemTest/Include/: flecs.h  flecs_dash.h  flecs_json.h  flecs_meta.h  flecs_monitor.h  flecs_os_api_stdcpp.cpp  flecs_player.h  flecs_rest.c  flecs_rest.h  flecs_systems_civetweb.h
ItemTest/ItemTest/Release/: ItemTest.exe.recipe
ItemTest/ItemTest/Release/ItemTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ItemTest.lastbuildstate  ItemTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ItemTest/ItemTest/src/: Item.cpp  Item.h  ItemComponents.cpp  ItemComponents.h  ItemConfig.cpp  ItemConfig.h  ItemConfigComponents.h  main.cpp
ItemTest/ItemTest/x64/Debug/: CodeAnalysisResultManifest.txt  ItemTest.exe.recipe  vc142.idb
ItemTest/Release/: ItemTest.iobj  ItemTest.ipdb
ItemTest/x64/Debug/: ItemTest.exp
ItemTest/x64/Release/: ItemTest.exp
(+18 files in other folders)
